--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,9 @@ mqttconfig:
   serverUrls: tcp://192.168.18.150:1883
   userName: admin
   password: password
-  topic: final_iotgateway,testTopic
+  readTopic: final_iotgateway,testTopic
+  writeTopic: testTopic
   completionTimeout: 5000
   qos: 1
+  clientId: bjy
 
