--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ mqttconfig:
   serverUrls: tcp://192.168.18.150:1883
   userName: admin
   password: password
-  readTopic: final_iotgateway,testTopic
+  readTopic: final_iotgateway
   writeTopic: testTopic
   completionTimeout: 5000
   qos: 1
